5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1723_2507.log
== TEST (2019-05-14 11:30:35) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a==8000):
	print("MAXIMO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:34) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
else:
	print("MAXIMO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:31:37) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
else:
	print("MAXIMO")

-- EXECUTION TIME:
0.136549
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:53) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a==8000):
	print("MAXIMO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:31:56) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a==8000):
	print("MAXIMO")

-- EXECUTION TIME:
0.137407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:06) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:09) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")

-- EXECUTION TIME:
0.176883
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:13) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
eli(a>=8000):
	print("MAXIMO")

-- EXECUTION TIME:
0.142909
-- ERROR:
  File "/home/codebench/codes/1723/2507/main.py", line 12
    eli(a>=8000):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:20) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>8000):
	print("MAXIMO")

-- EXECUTION TIME:
0.173597
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:56) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>8000):
	print("MAXIMO")
print(meses)
-- EXECUTION TIME:
0.152699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:33:03) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- EXECUTION TIME:
0.168617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:33:10) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:33:45) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:33:55) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:24) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	if(a>0 and a<8000):
		c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:35:42) 
-- CODE:
a = int(input("qnt inicial de pirarucu: "))
b = float(input("percentual de crescimento: "))
c = int(input("qnt de pirarucu vendido a cada mes: "))
meses = 0
while(a>0 and a<8000):
	txcm= (a*b)/100
	a = a + txcm - c
	meses = meses + 1
	if(a>0 and a<8000):
		c = int(input("qnt de pirarucu vendido a cada mes: "))
if(a<0):
	print("ZERO")
elif(a>=8000):
	print("MAXIMO")
print(meses)
-- EXECUTION TIME:
0.155524
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
